--- a/Thoughts/When_Normalizing_embeddings_is_recommanded.ipynb
+++ b/Thoughts/When_Normalizing_embeddings_is_recommanded.ipynb
@@ -10,45 +10,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "1ad35058",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\anass\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "root_dir = Path().resolve().parent  # remonte à la racine\n",
+    "if str(root_dir) not in sys.path:\n",
+    "    sys.path.insert(0, str(root_dir))\n",
+    "\n",
+    "\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "import emoji\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time\n",
     "import re\n",
+    "import matplotlib.pyplot as plt\n",
+    "import umap.umap_ as umap\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "from utils.helper_functions import clean_text\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "\n",
-    "def clean_text(text: str) -> str:\n",
-    "    \"\"\"\n",
-    "    Supprime les emojis et normalise les espaces dans une chaîne de caractères.\n",
     "\n",
-    "    INPUTS:\n",
-    "    text : str   Texte brut à nettoyer.\n",
-    "\n",
-    "    OUTPUTS:\n",
-    "    str Texte nettoyé (sans emoji, avec espaces normalisés).\n",
-    "    \"\"\"\n",
-    "    text = emoji.replace_emoji(text, replace=\"\")\n",
-    "    text = re.sub(r\"\\s+\", \" \", text)\n",
-    "    text = text.strip()\n",
-    "    return text\n",
     "\n",
     "model_mini = SentenceTransformer('all-MiniLM-L6-v2', device='cuda')\n",
     "model_multi = SentenceTransformer('paraphrase-multilingual-MiniLM-L12-v2', device='cuda')\n"
@@ -79,19 +69,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "2d52c964",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"data/importation-635-focus-AI.csv\"\n",
-    "df = pd.read_csv(path, sep=\";\")\n",
+    "file_path = root_dir/Path(\"data/importation-635-focus-AI.csv\")\n",
+    "df = pd.read_csv(file_path, sep=\";\")\n",
     "texts = df.sentences.apply(lambda x: clean_text(x)).tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "2dff2102",
    "metadata": {},
    "outputs": [
@@ -99,22 +89,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.47 s ± 4.52 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "1.48 s ± 6.45 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.37 s ± 5.79 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "1.38 s ± 6.31 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Batches: 100%|██████████| 58/58 [00:01<00:00, 38.47it/s]\n",
-      "Batches: 100%|██████████| 58/58 [00:01<00:00, 38.56it/s]\n"
+      "Batches: 100%|██████████| 58/58 [00:01<00:00, 42.73it/s]\n",
+      "Batches: 100%|██████████| 58/58 [00:01<00:00, 41.85it/s]\n"
      ]
     }
    ],
    "source": [
-    "%timeit embeddings_multi_normalization = model_multi.encode(texts, device='cuda', normalize_embeddings=True, batch_size=64)\n",
-    "%timeit embeddings_multi = model_multi.encode(texts, device='cuda', batch_size=64)\n",
+    "%timeit embeddings_multi_normalization = model_multi.encode(texts, device='cuda', normalize_embeddings=True, batch_size=128)\n",
+    "%timeit embeddings_multi = model_multi.encode(texts, device='cuda', batch_size=128)\n",
     "\n",
     "\n",
     "embeddings_multi_normalization = model_multi.encode(texts, show_progress_bar=True, device='cuda', normalize_embeddings=True)\n",
@@ -123,28 +113,6 @@
     "# Remove duplicate embeddings\n",
     "embeddings_multi_normalization = np.unique(embeddings_multi_normalization, axis=0)\n",
     "embeddings_multi = np.unique(embeddings_multi, axis=0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e2a95a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1271, 384)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "embeddings_multi.shape\n",
-    "model_mini"
    ]
   },
   {
@@ -257,15 +225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "b3c786ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import umap\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
     "reducer = umap.UMAP(n_components=2, random_state=42, n_jobs=-1, metric='cosine')\n",
     "reducer2 = umap.UMAP(n_components=2, random_state=42, n_jobs=-1, metric='euclidean')\n",
     "\n",
@@ -276,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "24bec5ba",
    "metadata": {},
    "outputs": [
@@ -360,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0c8f81c2",
    "metadata": {},
    "outputs": [],
@@ -374,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "5f9dd0e2",
    "metadata": {},
    "outputs": [
@@ -415,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "b2fa6b0f",
    "metadata": {},
    "outputs": [
@@ -439,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "03a6fb83",
    "metadata": {},
    "outputs": [
@@ -449,7 +413,7 @@
        "array([[1.]], dtype=float32)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,14 +421,6 @@
    "source": [
     "cosine_similarity(anass, anass1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f5b0ef8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -475,12 +431,6 @@
     "\n",
     "If we apply HDBSCAN after an UMAP, using euclidean distance isn't a choice, IT'S A MUST! "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6cb22e1c",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
